--- a/environment.yml
+++ b/environment.yml
@@ -4,10 +4,8 @@ channels:
   - defaults
 dependencies:
   - pip
-  - geopandas=0.10.2
-  - numba=0.54.1
-  - numpy=1.20.3
-  - pandas=1.4.0
-  - pip:    
-    - retry==0.9.2
-    
+  - pip:
+    - hydrafloods
+
+
+
