--- a/environment.yml
+++ b/environment.yml
@@ -6,12 +6,15 @@ dependencies:
   - pip
   - pydantic
   - jupyter
+  - numpy=1.26.0
+  - pandas=2.2.1
   - pip:
     - hydrafloods
     - geemap
     - pytest
     - pydantic_settings
     - mock
+    - tabulate
 
 
 
