--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,12 @@ Home = "https://github.com/Deltares-research/EO-floods"
 select = ["ALL"]
 
 [tool.ruff]
-line-length = 120
+line-length = 100
 exclude = ["tests/*.py"]
+
+[tool.ruff.format]
+docstring-code-format = true
+
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
